<resources>

    <string name="app_name">TicTacToeApp</string>
    <string name="btn_new_game_text">Новая игра</string>
    <string name="btn_continue_game_text">Продолжить игру</string>
    <string name="btn_settings_text">Настройки</string>
    <string name="tv_voice_text">Звук</string>
    <string name="tv_difficulty_text">Сложность</string>
    <string name="tv_difficulty_easy_text">легко</string>
    <string name="tv_rules_text">Правила игры</string>
    <string name="tv_check_box_vertical_text">Ряд по вертикали</string>
    <string name="tv_check_box_horizontal_text">Ряд по горизонтали</string>
    <string name="tv_check_box_diagonal_text">Ряд по диагонали</string>

</resources>