<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMainLayout"
    tools:context=".MainFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/width_big_256"
        android:layout_height="@dimen/width_big_256"
        android:layout_marginStart="@dimen/margin_big_64"
        android:layout_marginTop="@dimen/margin_big_64"
        android:layout_marginEnd="@dimen/margin_big_64"
        android:src="@drawable/ic_logo_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnNewGame"
        style="@style/StyleNavButton"
        android:layout_width="@dimen/width_big_256"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_big_64"
        android:layout_marginTop="@dimen/margin_big_64"
        android:layout_marginEnd="@dimen/margin_big_64"
        android:text="@string/btn_new_game_text"
        app:layout_constraintEnd_toEndOf="@+id/ivLogo"
        app:layout_constraintStart_toStartOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <Button
        android:id="@+id/btnContinueGame"
        style="@style/StyleNavButton"
        android:layout_width="@dimen/width_big_256"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_16"
        android:text="@string/btn_continue_game_text"
        app:layout_constraintEnd_toEndOf="@+id/btnNewGame"
        app:layout_constraintStart_toStartOf="@+id/btnNewGame"
        app:layout_constraintTop_toBottomOf="@+id/btnNewGame" />

    <Button
        android:id="@+id/btnSettings"
        style="@style/StyleNavButton"
        android:layout_width="@dimen/width_big_256"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_16"
        android:text="@string/btn_settings_text"
        app:layout_constraintEnd_toEndOf="@+id/btnContinueGame"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="@+id/btnContinueGame"
        app:layout_constraintTop_toBottomOf="@+id/btnContinueGame" />

</androidx.constraintlayout.widget.ConstraintLayout>